fix: fix NPE in RateLimiter (#114)
Co-authored-by: Aliaksandr Stsiapanay <aliaksandr_stsiapanay@epam.com>